cli/src/tests/error/comparing.sibs
$mode != = "dev";
$mode != ! "dev";
@os(window) == "true;
@os(window) != -true";
@os(window) == ("a", "b");
@os(window) != ("a"; "b",);
"dev" == =$mode;
"dev" != $=mode;
"true == @os(window);
"true" !== @os(window);
("a", "b") == @os(window);
("a" "b") != @os(window);